wip/todo: fix feeds overflow properly

--- a/frontend/view/css/chris.feed.css
+++ b/frontend/view/css/chris.feed.css
@@ -10,7 +10,7 @@
 
 .feed_update {
 	margin-top: -1px;
-	padding: 10px;
+	padding: 4px;
 	border-top: 1px solid;
 	border-bottom: 1px solid;
 	border-color: grey;
